@@ -118,6 +118,9 @@ struct netdev_linux {
     bool requested_need_wakeup;
 
     struct netdev_afxdp_tx_lock *tx_locks;  /* Array of locks for TX queues. */
+    const char *xdp_obj_path;         /* XDP object file path. */
+    const char *requested_xdp_obj;
+    struct bpf_object *xdp_obj;
 #endif
 };
 
